fix coins sidenav items alignment

--- a/frontend/src/styles/styles.css
+++ b/frontend/src/styles/styles.css
@@ -431,6 +431,10 @@ main {
 
 .wallet-sidenav-coin {
     margin: 20px 0;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    flex-wrap: wrap;
 }
 
 .wallet-body-wrapper {
